package models;

import com.amazonaws.services.dynamodbv2.datamodeling.*;
import lombok.Data;

import java.util.ArrayList;
import java.util.Date;

@Data
@DynamoDBTable(tableName = "post")
public class Post {

    @DynamoDBAutoGeneratedKey
    private String id;

    private PostThread postThread;



    @DynamoDBHashKey(attributeName = "user_id")
    private String fromUser;

    private String content;

    private String title;

    private Date date;

    private Integer likes;

    public Post(String fromUser) {
        this.fromUser = fromUser;
    }



    public Post() {
    }

    public Post(PostThread postThread, String fromUser, String content, Date date, int likes) {

        this.postThread = postThread;
        this.fromUser = fromUser;
        this.content = content;
        this.date = date;
        this.likes = likes;
    }

    @DynamoDBAttribute(attributeName = "author_post_id")

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }


    @DynamoDBAttribute
    @DynamoDBTyped(DynamoDBMapperFieldModel.DynamoDBAttributeType.S)
    public String getPostThread() {

        return postThread.getId();
    }

    public void setPostThread(PostThread postThread) {
        this.postThread = postThread;
    }


    @DynamoDBHashKey(attributeName = "user_id")
    @DynamoDBTyped(DynamoDBMapperFieldModel.DynamoDBAttributeType.S)
    public String getFromUser() {
        return fromUser;
    }

    public void setFromUser(String fromUser) {
        this.fromUser = fromUser;
    }


    @DynamoDBAttribute
    public String getContent() {
        return getContent();
    }

    public void setContent(String content) {
        this.content = content;
    }


    @DynamoDBAttribute
    public Date getDate() {
        return date;
    }

    public void setDate(Date date) {
        this.date = date;
    }


    @DynamoDBAttribute
    public int getLikes() {
        return likes;
    }

    public void setLikes(int likes) {
        this.likes = likes;
    }

    public void reply(Post post) {
        this.postThread.addPost(post);
        //this.fromUser.getPosts().add(post);
    }

    @DynamoDBAttribute
    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
        this.title = title;
    }
}
