package models;

import com.amazonaws.services.dynamodbv2.datamodeling.*;
import lombok.Data;
import models.converter.ListConverterForPost;

import java.util.*;


@Data
@DynamoDBTable(tableName = "post_thread")
public class PostThread {

    @DynamoDBHashKey (attributeName = "id")
    @DynamoDBAutoGeneratedKey
    private String id;

    @DynamoDBAttribute
    private String title;

    @DynamoDBAttribute
    @DynamoDBTypeConverted(converter = ListConverterForPost.class)
    private List<Post> posts;

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }


    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
        this.title = title;
    }

    @DynamoDBTypeConverted(converter = ListConverterForPost.class)
    public List<Post> getPosts() {
        return new List<Post>() {
            @Override
            public int size() {
                if (posts.size() != 0) {
                    return posts.size();
                }
            return 0;

            }

            @Override
            public boolean isEmpty() {
                return false;
            }

            @Override
            public boolean contains(Object o) {
                return true;
            }

            @Override
            public Iterator<Post> iterator() {
                return posts.listIterator();
            }

            @Override
            public Object[] toArray() {
                return new Object[0];
            }

            @Override
            public <T> T[] toArray(T[] a) {
                return a;
            }

            @Override
            public boolean add(Post post) {
                return true;
            }

            @Override
            public boolean remove(Object o) {
                return false;
            }

            @Override
            public boolean containsAll(Collection<?> c) {
                return true;
            }

            @Override
            public boolean addAll(Collection<? extends Post> c) {
                return true;
            }

            @Override
            public boolean addAll(int index, Collection<? extends Post> c) {
                return true;
            }

            @Override
            public boolean removeAll(Collection<?> c) {
                return false;
            }

            @Override
            public boolean retainAll(Collection<?> c) {
                return true;
            }

            @Override
            public void clear() {

            }

            @Override
            public Post get(int index) {
                return new Post();
            }

            @Override
            public Post set(int index, Post element) {
                return element;
            }

            @Override
            public void add(int index, Post element) {

            }

            @Override
            public Post remove(int index) {
                return null;
            }

            @Override
            public int indexOf(Object o) {
                return 0;
            }

            @Override
            public int lastIndexOf(Object o) {
                return 0;
            }

            @Override
            public ListIterator<Post> listIterator() {
                return null;
            }

            @Override
            public ListIterator<Post> listIterator(int index) {
                return null;
            }

            @Override
            public List<Post> subList(int fromIndex, int toIndex) {
                return null;
            }
        };
    }

    public void setPosts(List<Post> posts) {
        this.posts = new List<Post>() {
            @Override
            public int size() {
                return posts.size();
            }

            @Override
            public boolean isEmpty() {
                return false;
            }

            @Override
            public boolean contains(Object o) {
                return true;
            }

            @Override
            public Iterator<Post> iterator() {
                return posts.iterator();
            }

            @Override
            public Object[] toArray() {
                return new Object[0];
            }

            @Override
            public <T> T[] toArray(T[] a) {
                return a;
            }

            @Override
            public boolean add(Post post) {
                return true;
            }

            @Override
            public boolean remove(Object o) {
                return false;
            }

            @Override
            public boolean containsAll(Collection<?> c) {
                return true;
            }

            @Override
            public boolean addAll(Collection<? extends Post> c) {
                return true;
            }

            @Override
            public boolean addAll(int index, Collection<? extends Post> c) {
                return true;
            }

            @Override
            public boolean removeAll(Collection<?> c) {
                return false;
            }

            @Override
            public boolean retainAll(Collection<?> c) {
                return true;
            }

            @Override
            public void clear() {

            }

            @Override
            public Post get(int index) {
                return posts.get(index);
            }

            @Override
            public Post set(int index, Post element) {
                return posts.set(index,element);
            }

            @Override
            public void add(int index, Post element) {

            }

            @Override
            public Post remove(int index) {
                return null;
            }

            @Override
            public int indexOf(Object o) {
                return posts.indexOf(o);
            }

            @Override
            public int lastIndexOf(Object o) {
                return 0;
            }

            @Override
            public ListIterator<Post> listIterator() {
                return null;
            }

            @Override
            public ListIterator<Post> listIterator(int index) {
                return null;
            }

            @Override
            public List<Post> subList(int fromIndex, int toIndex) {
                return posts;
            }
        };
    }

    public Post addPost(Post posts) {
        posts.getPostThread();
        return posts;
    }

    @Override
    public String toString() {
        return "PostThread{" +
                "id='" + id + '\'' +
                ", title='" + title + '\'' +
                ", posts=" + posts +
                '}';
    }
}
